packages/ipp/src/ImagProc/Ipp/ptr_adapt.h

int ippiIntegral_8u32f_C1Rx(unsigned char*, int, float*, int, void*, float);
int ippiSqrIntegral_8u32f64f_C1Rx(unsigned char*, int, float*, int, double*, int, void*, float, double);
int ippiCannyGetSizex(void*, int*);
int ippiCanny_32f8u_C1Rx(float*, int, float*, int, unsigned char*, int, void*, float, float, unsigned char*);
int ippiDistanceTransform_3x3_8u32f_C1Rx(unsigned char*, int, float*, int, void*, float*);
int ippiDistanceTransform_5x5_8u32f_C1Rx(unsigned char*, int, float*, int, void*, float*);
int ippiFastMarchingGetBufferSize_8u32f_C1Rx(void*, int*);
int ippiFastMarching_8u32f_C1Rx(unsigned char*, int, float*, int, void*, float, unsigned char*);
int ippiFloodFillGetSizex(void*, int*);
int ippiFloodFillGetSize_Gradx(void*, int*);
int ippiFloodFill_8Con_8u_C1IRx(unsigned char*, int, void*, void*, unsigned char, void*, unsigned char*);
int ippiFloodFill_Grad8Con_8u_C1IRx(unsigned char*, int, void*, void*, unsigned char, unsigned char, unsigned char, void*, unsigned char*);
int ippiUndistortGetSizex(void*, int*);
int ippiCreateMapCameraUndistort_32f_C1Rx(float*, int, float*, int, void*, float, float, float, float, float, float, float, float, unsigned char*);
int ippiUndistortRadial_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, float, float, float, float, float, float, unsigned char*);
int ippiUndistortRadial_32f_C1Rx(float*, int, float*, int, void*, float, float, float, float, float, float, unsigned char*);
int ippiUndistortRadial_8u_C3Rx(unsigned char*, int, unsigned char*, int, void*, float, float, float, float, float, float, unsigned char*);
int ippiSegmentWatershedGetBufferSize_8u_C1Rx(void*, int*);
int ippiSegmentWatershed_8u_C1IRx(unsigned char*, int, unsigned char*, int, void*, int, int, unsigned char*);