packages/ipp/src/ImagProc/Ipp/Adapt.hs


foreign import ccall "ippiIntegral_8u32f_C1Rx"
    ippiIntegral_8u32f_C1Rx :: Ptr Word8 -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> IO CInt
ippiIntegral_8u32f_C1R pSrc srcStep pDst dstStep roiSize val = do
    proiSize <- new roiSize
    r <- ippiIntegral_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize val
    free proiSize
    return r

foreign import ccall "ippiSqrIntegral_8u32f64f_C1Rx"
    ippiSqrIntegral_8u32f64f_C1Rx :: Ptr Word8 -> Int -> Ptr Float -> Int -> Ptr Double -> Int -> Ptr IppiSize -> Float -> Double -> IO CInt
ippiSqrIntegral_8u32f64f_C1R pSrc srcStep pDst dstStep pSqr sqrStep roiSize val valSqr = do
    proiSize <- new roiSize
    r <- ippiSqrIntegral_8u32f64f_C1Rx pSrc srcStep pDst dstStep pSqr sqrStep proiSize val valSqr
    free proiSize
    return r

foreign import ccall "ippiCannyGetSizex"
    ippiCannyGetSizex :: Ptr IppiSize -> Ptr CInt -> IO CInt
ippiCannyGetSize roiSize bufferSize = do
    proiSize <- new roiSize
    r <- ippiCannyGetSizex proiSize bufferSize
    free proiSize
    return r

foreign import ccall "ippiCanny_32f8u_C1Rx"
    ippiCanny_32f8u_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Float -> Float -> Ptr Word8 -> IO CInt
ippiCanny_32f8u_C1R pSrcDx srcDxStep pSrcDy srcDyStep pDstEdges dstEdgeStep roiSize lowThresh highThresh pBuffer = do
    proiSize <- new roiSize
    r <- ippiCanny_32f8u_C1Rx pSrcDx srcDxStep pSrcDy srcDyStep pDstEdges dstEdgeStep proiSize lowThresh highThresh pBuffer
    free proiSize
    return r

foreign import ccall "ippiDistanceTransform_3x3_8u32f_C1Rx"
    ippiDistanceTransform_3x3_8u32f_C1Rx :: Ptr Word8 -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> IO CInt
ippiDistanceTransform_3x3_8u32f_C1R pSrc srcStep pDst dstStep roiSize pMetrics = do
    proiSize <- new roiSize
    r <- ippiDistanceTransform_3x3_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize pMetrics
    free proiSize
    return r

foreign import ccall "ippiDistanceTransform_5x5_8u32f_C1Rx"
    ippiDistanceTransform_5x5_8u32f_C1Rx :: Ptr Word8 -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr Float -> IO CInt
ippiDistanceTransform_5x5_8u32f_C1R pSrc srcStep pDst dstStep roiSize pMetrics = do
    proiSize <- new roiSize
    r <- ippiDistanceTransform_5x5_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize pMetrics
    free proiSize
    return r

foreign import ccall "ippiFastMarchingGetBufferSize_8u32f_C1Rx"
    ippiFastMarchingGetBufferSize_8u32f_C1Rx :: Ptr IppiSize -> Ptr CInt -> IO CInt
ippiFastMarchingGetBufferSize_8u32f_C1R roiSize pBufferSize = do
    proiSize <- new roiSize
    r <- ippiFastMarchingGetBufferSize_8u32f_C1Rx proiSize pBufferSize
    free proiSize
    return r

foreign import ccall "ippiFastMarching_8u32f_C1Rx"
    ippiFastMarching_8u32f_C1Rx :: Ptr Word8 -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Ptr Word8 -> IO CInt
ippiFastMarching_8u32f_C1R pSrc srcStep pDst dstStep roiSize radius pBuffer = do
    proiSize <- new roiSize
    r <- ippiFastMarching_8u32f_C1Rx pSrc srcStep pDst dstStep proiSize radius pBuffer
    free proiSize
    return r

foreign import ccall "ippiFloodFillGetSizex"
    ippiFloodFillGetSizex :: Ptr IppiSize -> Ptr CInt -> IO CInt
ippiFloodFillGetSize roiSize pBufSize = do
    proiSize <- new roiSize
    r <- ippiFloodFillGetSizex proiSize pBufSize
    free proiSize
    return r

foreign import ccall "ippiFloodFillGetSize_Gradx"
    ippiFloodFillGetSize_Gradx :: Ptr IppiSize -> Ptr CInt -> IO CInt
ippiFloodFillGetSize_Grad roiSize pBufSize = do
    proiSize <- new roiSize
    r <- ippiFloodFillGetSize_Gradx proiSize pBufSize
    free proiSize
    return r

foreign import ccall "ippiFloodFill_8Con_8u_C1IRx"
    ippiFloodFill_8Con_8u_C1IRx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr IppiPoint -> Word8 -> Ptr IppiConnectedComp -> Ptr Word8 -> IO CInt
ippiFloodFill_8Con_8u_C1IR pImage imageStep roiSize seed newVal pRegion pBuffer = do
    proiSize <- new roiSize
    pseed <- new seed
    r <- ippiFloodFill_8Con_8u_C1IRx pImage imageStep proiSize pseed newVal pRegion pBuffer
    free proiSize
    free pseed
    return r

foreign import ccall "ippiFloodFill_Grad8Con_8u_C1IRx"
    ippiFloodFill_Grad8Con_8u_C1IRx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr IppiPoint -> Word8 -> Word8 -> Word8 -> Ptr IppiConnectedComp -> Ptr Word8 -> IO CInt
ippiFloodFill_Grad8Con_8u_C1IR pImage imageStep roiSize seed newVal minDelta maxDelta pRegion pBuffer = do
    proiSize <- new roiSize
    pseed <- new seed
    r <- ippiFloodFill_Grad8Con_8u_C1IRx pImage imageStep proiSize pseed newVal minDelta maxDelta pRegion pBuffer
    free proiSize
    free pseed
    return r

foreign import ccall "ippiUndistortGetSizex"
    ippiUndistortGetSizex :: Ptr IppiSize -> Ptr CInt -> IO CInt
ippiUndistortGetSize roiSize pBufsize = do
    proiSize <- new roiSize
    r <- ippiUndistortGetSizex proiSize pBufsize
    free proiSize
    return r

foreign import ccall "ippiCreateMapCameraUndistort_32f_C1Rx"
    ippiCreateMapCameraUndistort_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Float -> Float -> Float -> Float -> Float -> Float -> Float -> Ptr Word8 -> IO CInt
ippiCreateMapCameraUndistort_32f_C1R pxMap xStep pyMap yStep roiSize fx fy cx cy k1 k2 p1 p2 pBuffer = do
    proiSize <- new roiSize
    r <- ippiCreateMapCameraUndistort_32f_C1Rx pxMap xStep pyMap yStep proiSize fx fy cx cy k1 k2 p1 p2 pBuffer
    free proiSize
    return r

foreign import ccall "ippiUndistortRadial_8u_C1Rx"
    ippiUndistortRadial_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Float -> Float -> Float -> Float -> Float -> Float -> Ptr Word8 -> IO CInt
ippiUndistortRadial_8u_C1R pSrc srcStep pDst dstStep roiSize fx fy cx cy k1 k2 pBuffer = do
    proiSize <- new roiSize
    r <- ippiUndistortRadial_8u_C1Rx pSrc srcStep pDst dstStep proiSize fx fy cx cy k1 k2 pBuffer
    free proiSize
    return r

foreign import ccall "ippiUndistortRadial_32f_C1Rx"
    ippiUndistortRadial_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Float -> Float -> Float -> Float -> Float -> Float -> Ptr Word8 -> IO CInt
ippiUndistortRadial_32f_C1R pSrc srcStep pDst dstStep roiSize fx fy cx cy k1 k2 pBuffer = do
    proiSize <- new roiSize
    r <- ippiUndistortRadial_32f_C1Rx pSrc srcStep pDst dstStep proiSize fx fy cx cy k1 k2 pBuffer
    free proiSize
    return r

foreign import ccall "ippiUndistortRadial_8u_C3Rx"
    ippiUndistortRadial_8u_C3Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Float -> Float -> Float -> Float -> Float -> Float -> Ptr Word8 -> IO CInt
ippiUndistortRadial_8u_C3R pSrc srcStep pDst dstStep roiSize fx fy cx cy k1 k2 pBuffer = do
    proiSize <- new roiSize
    r <- ippiUndistortRadial_8u_C3Rx pSrc srcStep pDst dstStep proiSize fx fy cx cy k1 k2 pBuffer
    free proiSize
    return r

foreign import ccall "ippiSegmentWatershedGetBufferSize_8u_C1Rx"
    ippiSegmentWatershedGetBufferSize_8u_C1Rx :: Ptr IppiSize -> Ptr CInt -> IO CInt
ippiSegmentWatershedGetBufferSize_8u_C1R roiSize pBufSize = do
    proiSize <- new roiSize
    r <- ippiSegmentWatershedGetBufferSize_8u_C1Rx proiSize pBufSize
    free proiSize
    return r

foreign import ccall "ippiSegmentWatershed_8u_C1IRx"
    ippiSegmentWatershed_8u_C1IRx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> CInt -> Int -> Ptr Word8 -> IO CInt
ippiSegmentWatershed_8u_C1IR pSrc srcStep pMarker markerStep roiSize norm flag pBuffer = do
    proiSize <- new roiSize
    r <- ippiSegmentWatershed_8u_C1IRx pSrc srcStep pMarker markerStep proiSize norm flag pBuffer
    free proiSize
    return r

